# eclipse-chat

./: .commit-message.tmp  .env.example  .gitignore  Agents.md  CLAUDE.md  Context.md  LICENSE  Memory.md  Persona.md  README.md  ROADMAP.md  Skills.md  docker-compose.dev.yml  package-lock.json  package.json
.github/workflows/: android-release.yml  ci.yml  deploy-prod.yml  desktop-release.yml
apps/android/: .gitignore  README.md  capacitor.config.json  capacitor.config.ts  package.json
apps/android/native/: MainActivity.java
apps/android/www/: index.html
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  remote-autostart.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: installer-hooks.nsh
apps/server/: .env.example  .gitignore  README.md  package.json  vitest.config.ts
apps/web/: .env.desktop  .env.production  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
deploy/: initial-setup.sh
deploy/cron.d/: eclipse-chat-backup
deploy/livekit/: docker-compose.livekit.yml  livekit.yaml.example  setup.sh
deploy/network-gateway/: .env.example  docker-compose.yml  squid.conf
deploy/nginx/: eclipse-chat-livekit.conf  eclipse-chat.conf
deploy/scripts/: backup-db.sh  deploy.sh  smoke.sh  sync-nginx.sh  sync-supervisor.sh
deploy/supervisor/: eclipse-chat-server.conf  eclipse-chat.conf
docs/: AI-SETUP.md  API.md  BOT-API.md  CI-SETUP.md  DEPLOY-TO-STAR-CRM.md  DEPLOYMENT.md  DEVELOPMENT.md  LIVEKIT-SETUP.md  NETWORK-GATEWAY.md  NEW-CHAT-PROMPT.md  NEXT-GEN-OPERATIONAL-PLATFORM.md  PUBLIC-PROFILES.md  SOCKET_EVENTS.md  USER-ACCESS-RECOVERY.md  discord-parity-roadmap.md  sound-packs.md
docs/design/: design-brief-v2.md  design-system-reference.md  surface-map.md
docs/design-mockups/: README.md  preview.html
docs/design-prompts/: current-state.html  google-ai-studio-prompt.md
docs/prompts/: humanize-rewriter.md
(+466 files in other folders)
