[package]
name = "eclipse-chat-desktop"
version = "1.0.2"
description = "Eclipse Chat desktop shell (Tauri 2)"
authors = ["Pavel Hopson <hopsintoxin@mail.ru>"]
edition = "2021"

# Library: shared между binary (main.rs) и mobile (Tauri 2 mobile когда дойдём
# до Phase C на iOS/Android). lib.rs содержит фактический Tauri entry point —
# main.rs просто вызывает его.
[lib]
name = "eclipse_chat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# v1.5.39 — Phase B Tauri #2 plugins:
#   notification — native OS notifications (Action Center / Notification Center / libnotify)
#   updater      — auto-update from GitHub Releases (signed manifest)
#   window-state — persists window position/size between launches
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
